--- a/package.json
+++ b/package.json
@@ -12,22 +12,23 @@
   },
   "packageManager": "pnpm@8.0.0",
   "dependencies": {
-    "fastify": "^4.24.3",
-    "mongoose": "^8.0.3",
+    "@fastify/cors": "^11.1.0",
     "axios": "^1.6.2",
-    "cheerio": "^1.0.0-rc.12",
     "bcrypt": "^5.1.1",
+    "cheerio": "^1.0.0-rc.12",
+    "dotenv": "^16.3.1",
+    "fastify": "^4.24.3",
     "jsonwebtoken": "^9.0.2",
-    "dotenv": "^16.3.1"
+    "mongoose": "^8.0.3"
   },
   "devDependencies": {
-    "@types/node": "^20.10.0",
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.5",
-    "typescript": "^5.3.2",
-    "ts-node-dev": "^2.0.0",
+    "@types/node": "^20.10.0",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
-    "eslint": "^8.54.0"
+    "eslint": "^8.54.0",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.3.2"
   }
 }
